Add private search-start signal

https://bugzilla.gnome.org/show_bug.cgi?id=742550